Add a few CHI papers (yay!), and moved Leo

--- a/papers/index.html
+++ b/papers/index.html
@@ -73,6 +73,8 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2022">2022</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2021">2021</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2020">2020</a>&nbsp;&nbsp;&nbsp;
@@ -117,10 +119,48 @@
 					<div id="content">
 						<!-- Content -->
 						
-<p>2022</p>
-
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/poretski2022learnability"><span id="poretski2022learnability">Lev Poretski and Anthony Tang. (2022). <span style="text-decoration: underline">Press A to Jump: Design Strategies for Video Game Learnability</span>. In <i>CHI 2022: Proceedings of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 24.7% - 638/2579.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href=""><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/poretski2022learnability/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2022illusions"><span id="feick2022illusions">Martin Feick, Kora Persephone Regitz, Anthony Tang, and Antonio Krüger. (2022). <span style="text-decoration: underline">Designing Visuo-Haptic Illusions with Proxies in Virtual Reality: Exploration of Grasp, Movement Trajectory and Object Mass</span>. In <i>CHI 2022: Proceedings of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 24.7% - 638/2579.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href=""><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/feick2022illusions/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/jones2022rescuecastr"><span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
 
 (journal).</a><br />
@@ -133,12 +173,14 @@
 
 </section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 4, GROUP.</span>
+    <a href="/papers/labrie2022onlineteaching"><span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, GROUP.</span>
 
 (journal).</a><br />
 
 
 
+
+	<a href="http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
@@ -166,6 +208,28 @@
 
 
 </section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+
+(journal).</a><br />
+
+
+	<small>Notes: Best Paper award.</small>
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/kudo2021balancing/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/li2021routetapestries"><span id="li2021routetapestries">Jiannan Li, Jiahe Lyu, Mauricio Sousa, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2021). <span style="text-decoration: underline">Route Tapestries: Navigating 360 Virtual Tour Videos Using Slit-Scan Visualizations</span>. In <i>UIST 2021: Proceedings of the 34th Annual ACM Symposium on User Interface Software and Technology</i>.</span>
 
@@ -281,21 +345,19 @@
 
 </section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/kudo2021balancing"><span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+    <a href="/papers/mitchev2021thesis"><span id="mitchev2021thesis">Andrey Svetlozarov Mintchev. (2021). <span style="text-decoration: underline">Applying Videogame Narrative and Level Design To Museum Exhibit Design</span>. </span>
 
-(journal).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
+(thesis).</a><br />
 
 
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i></a>
 
 
-</section><a class="details" href="/papers/kudo2021balancing/"><!-- --></a></li></ol>
+	<a href="http://hdl.handle.net/1807/109299"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/mitchev2021thesis/"><!-- --></a></li></ol>
 
 <h1><a name="2020"></a>2020</h1>
 <ol class="bibliography"><li><section id="citation">
@@ -314,6 +376,22 @@
 	<a href="https://doi.org/10.1145/3375190"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/jones2020wsar/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/jones2020dt4wsar"><span id="jones2020dt4wsar">Brennan Jones, Anthony Tang, Carman Neustaedter, Alissa N. Antle, and Elgin-Skye McLaren. (2020). <span style="text-decoration: underline">Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</span>. In <i>HCI Outdoors: Theory, Design, Methods and Applications. Human–Computer Interaction Series.</i>, D.S. McCrickard, M. Jones and T.L. Stelter (eds.). Springer, 175–194.</span>
+
+(incollection).</a><br />
+
+
+
+
+	<a href="http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://doi.org/10.1007/978-3-030-45289-6_9"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/jones2020dt4wsar/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/feick2020vrqt"><span id="feick2020vrqt">Martin Feick, Niko Kleer, Anthony Tang, and Antonio Krüger. (2020). <span style="text-decoration: underline">The Virtual Reality Questionnaire Toolkit</span>. In <i>AP UIST 2020: Adjunct Proceedings of the 33rd Annual ACM Symposium on User Interface Software and Technology, UIST 2019</i>.</span>
 
@@ -443,21 +521,19 @@
 
 </section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/jones2020dt4wsar"><span id="jones2020dt4wsar">Brennan Jones, Anthony Tang, Carman Neustaedter, Alissa N. Antle, and Elgin-Skye McLaren. (2020). <span style="text-decoration: underline">Designing Technology for Shared Communication and Awareness in Wilderness Search and Rescue</span>. In <i>HCI Outdoors: Theory, Design, Methods and Applications. Human–Computer Interaction Series.</i>, D.S. McCrickard, M. Jones and T.L. Stelter (eds.). Springer, 175–194.</span>
+    <a href="/papers/stark2020thesis"><span id="stark2020thesis">Jessica Theresa Stark. (2020). <span style="text-decoration: underline">Redesigning instructional tools for novice makers</span>. </span>
 
-(incollection).</a><br />
-
-
-
-
-	<a href="http://hcitang.org/papers/2020-hcio-jones-dt4wsar.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-	<a href="https://doi.org/10.1007/978-3-030-45289-6_9"><i class="fa fa-sticky-note-o"></i></a>
+(thesis).</a><br />
 
 
 
-</section><a class="details" href="/papers/jones2020dt4wsar/"><!-- --></a></li></ol>
+
+
+	<a href="http://hdl.handle.net/1880/112384"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/stark2020thesis/"><!-- --></a></li></ol>
 
 <h1><a name="2019"></a>2019</h1>
 <ol class="bibliography"><li><section id="citation">
