--- a/papers/jones2022rescuecastr/index.html
+++ b/papers/jones2022rescuecastr/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Towards Balancing VR Immersion and Bystander Awareness</title>
+		<title>RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
+						<h1 style="margin: 0 0 0.5em 0">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+<span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
 
-
-	<small>Notes: Best Paper award.</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Head-mounted displays (HMDs) increase immersion into virtual worlds. The problem is that this limits headset users’ awareness of bystanders: headset users cannot attend to bystanders’ presence and activities. We call this HMD boundary. We explore how to make the HMD boundary permeable by comparing different ways of providing informal awareness cues to the headset user about bystanders. We adapted and implemented three visualization techniques (Avatar View, Radar and Presence++) that share bystanders’ location and orientation with headset users. We conducted a hybrid user and simulation study with three different types of VR content (high, medium, low interactively) with twenty participants to compare how these visualization techniques allow people to maintain an awareness of bystanders, and how they affect immersion (compared to a baseline condition). Our study reveals that a see-through avatar representation of bystanders was effective, but led to slightly reduced immersion in the VR content. Based on our findings, we discuss how future awareness visualization techniques can be designed to mitigate the reduction of immersion for the headset user.</p>
+<p style="margin: 0.5em 0 1em 0">Wilderness search and rescue (WSAR) is a command-and-control activity, where a Command team manages field teams scattered across a large area looking for a lost person. The challenge is that it can be difficult for Command to maintain awareness of field teams and the conditions of the field. We designed RescueCASTR, an interface that explores the idea of deploying field teams with wearable cameras that stream live video or sequential photos periodically to Command that aid contextual awareness. We ran a remote user study with WSAR managers to get an understanding of the opportunities and challenges of such a system. We found that the awareness provided by the camera footage could give additional confidence and comfort to Command, as well as reduce the need for explicit communications. However, it could also impact workers’ traditional roles and responsibilities, shifting the burden of responsibility toward Command. We conclude that, while wearable-camera footage could be beneficial to Command, they need to have the tools and means to narrow their focus within the abundance of information provided. Furthermore, camera streams should not be thought of as a replacement for more direct communications, but rather as another tool available to help Command supplement their understanding of events in the field and help them narrow their focus.</p>
 
 <!--
 
@@ -97,32 +95,21 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
 
 
-
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3486950)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
-&nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{jones2022rescuecastr,<br />
+&nbsp;&nbsp;author = {Jones, Brennan and Tang, Anthony and Neustaedter, Carman},<br />
 &nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;number = {Article 484},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
+&nbsp;&nbsp;title = {RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post},<br />
 &nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {5, ISS},<br />
-&nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3486950},<br />
-&nbsp;&nbsp;notes = {Best Paper award}<br />
+&nbsp;&nbsp;volume = {2, CSCW},<br />
+&nbsp;&nbsp;year = {2022}<br />
 }<br />
 </p>
 					</div>
