--- a/papers/labrie2022onlineteaching/index.html
+++ b/papers/labrie2022onlineteaching/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Towards Balancing VR Immersion and Bystander Awareness</title>
+		<title>Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
+						<h1 style="margin: 0 0 0.5em 0">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+<span id="labrie2022onlineteaching">Audrey Labrie, Terrance Mok, Anthony Tang, Michelle Lui, Lora Oehlberg, and Lev Poretski. (2022). <span style="text-decoration: underline">Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, GROUP.</span>
 
-
-	<small>Notes: Best Paper award.</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Head-mounted displays (HMDs) increase immersion into virtual worlds. The problem is that this limits headset users’ awareness of bystanders: headset users cannot attend to bystanders’ presence and activities. We call this HMD boundary. We explore how to make the HMD boundary permeable by comparing different ways of providing informal awareness cues to the headset user about bystanders. We adapted and implemented three visualization techniques (Avatar View, Radar and Presence++) that share bystanders’ location and orientation with headset users. We conducted a hybrid user and simulation study with three different types of VR content (high, medium, low interactively) with twenty participants to compare how these visualization techniques allow people to maintain an awareness of bystanders, and how they affect immersion (compared to a baseline condition). Our study reveals that a see-through avatar representation of bystanders was effective, but led to slightly reduced immersion in the VR content. Based on our findings, we discuss how future awareness visualization techniques can be designed to mitigate the reduction of immersion for the headset user.</p>
+<p style="margin: 0.5em 0 1em 0">Many instructors in computing and HCI disciplines use hands-on activities for teaching and training new skills. Beyond simply teaching hands-on skills like sketching and programming, instructors also use these activities so students can acquire tacit skills. Yet, current video-conferencing technologies do not effectively support hands-on activities in online teaching contexts. In order to better understand how instructors experience using online conferencing tools for hands-on activities, we conducted 15 interviews with university-level instructors who had quickly pivoted their use of hands-on activities to an online context during the early part of the COVID-19 pandemic. Based on our analysis, we uncovered four pedagogical goals that instructors have when using hands-on activities and how instructors were unable to adequately address them due to technological limitations. Our work provides empirical data about the challenges that many instructors experienced and a critical reflection on how to improve existing video-conferencing systems to better support hands-on activities.</p>
 
 <!--
 
@@ -97,32 +95,25 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
+	<a href="http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf)</a><br/>
 
 
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3486950)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
-&nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{labrie2022onlineteaching,<br />
+&nbsp;&nbsp;author = {Labrie, Audrey and Mok, Terrance and Tang, Anthony and Lui, Michelle and Oehlberg, Lora and Poretski, Lev},<br />
 &nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;number = {Article 484},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
+&nbsp;&nbsp;title = {Toward Video-Conferencing Tools for Hands-On Activities in Online Teaching},<br />
 &nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {5, ISS},<br />
-&nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3486950},<br />
-&nbsp;&nbsp;notes = {Best Paper award}<br />
+&nbsp;&nbsp;volume = {6, GROUP},<br />
+&nbsp;&nbsp;year = {2022},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf},<br />
+&nbsp;&nbsp;article = {10}<br />
 }<br />
 </p>
 					</div>
