--- a/papers/mitchev2021thesis/index.html
+++ b/papers/mitchev2021thesis/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Towards Balancing VR Immersion and Bystander Awareness</title>
+		<title>Applying Videogame Narrative and Level Design To Museum Exhibit Design</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
+						<h1 style="margin: 0 0 0.5em 0">Applying Videogame Narrative and Level Design To Museum Exhibit Design</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+<span id="mitchev2021thesis">Andrey Svetlozarov Mintchev. (2021). <span style="text-decoration: underline">Applying Videogame Narrative and Level Design To Museum Exhibit Design</span>. </span>
 
-
-	<small>Notes: Best Paper award.</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Head-mounted displays (HMDs) increase immersion into virtual worlds. The problem is that this limits headset users’ awareness of bystanders: headset users cannot attend to bystanders’ presence and activities. We call this HMD boundary. We explore how to make the HMD boundary permeable by comparing different ways of providing informal awareness cues to the headset user about bystanders. We adapted and implemented three visualization techniques (Avatar View, Radar and Presence++) that share bystanders’ location and orientation with headset users. We conducted a hybrid user and simulation study with three different types of VR content (high, medium, low interactively) with twenty participants to compare how these visualization techniques allow people to maintain an awareness of bystanders, and how they affect immersion (compared to a baseline condition). Our study reveals that a see-through avatar representation of bystanders was effective, but led to slightly reduced immersion in the VR content. Based on our findings, we discuss how future awareness visualization techniques can be designed to mitigate the reduction of immersion for the headset user.</p>
+<p style="margin: 0.5em 0 1em 0">This thesis examines how practices of narrative and level design used in the videogame industry can be applied to the museum sector, and from this research, propose a set of design lessons that can be used for the creation of exhibits. To that end, this thesis hypothesizes that these practices from gaming will serve the purpose of elevating the visitor experience—specifically in the way museum spaces, artifacts and their stories are presented, navigated, and experienced by the visitor. In order to produce this set of design lessons for exhibit creation, a qualitative study of five videogames was conducted for the purpose of identifying methods of narrative delivery, and level design practices. In regard to narrative design, I establish three methods of narrative embedding, partly inspired by Huaxin Wei’s work, in addition to summarizing Ahmed Khalifa et al.’s findings, which contributed to this studies understanding of level design. The combined knowledge of these works where foundational in developing a unit of analysis, which was used to identify narrative and level design practices within my sample. The findings from this research was then translated into applicable design practices for museum exhibit creation, called design lessons. Moreover, the design lessons developed from this study were used in the creation of a prototype exhibit for the purpose of demonstrating its effectiveness. Thus, this study advocates that there are indeed lessons to be learned from videogames which offer new perspectives in design to the museum sector. That in doing so, this study’s interest in providing museum professionals with new views on narrative and level design, will have a positive affect on the visitor experience.</p>
 
 <!--
 
@@ -97,32 +95,24 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
+
+	<a href="http://hdl.handle.net/1807/109299"><i class="fa fa-sticky-note-o"></i> URL (http://hdl.handle.net/1807/109299)</a><br/>
 
 
-
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3486950)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
-&nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;number = {Article 484},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {5, ISS},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@mastersthesis{mitchev2021thesis,<br />
+&nbsp;&nbsp;author = {Mintchev, Andrey Svetlozarov},<br />
+&nbsp;&nbsp;title = {Applying Videogame Narrative and Level Design To Museum Exhibit Design},<br />
+&nbsp;&nbsp;school = {University of Toronto},<br />
 &nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3486950},<br />
-&nbsp;&nbsp;notes = {Best Paper award}<br />
+&nbsp;&nbsp;month = nov,<br />
+&nbsp;&nbsp;url = {http://hdl.handle.net/1807/109299},<br />
+&nbsp;&nbsp;type = {thesis}<br />
 }<br />
 </p>
 					</div>
