--- a/papers/stark2020thesis/index.html
+++ b/papers/stark2020thesis/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Towards Balancing VR Immersion and Bystander Awareness</title>
+		<title>Redesigning instructional tools for novice makers</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
+						<h1 style="margin: 0 0 0.5em 0">Redesigning instructional tools for novice makers</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+<span id="stark2020thesis">Jessica Theresa Stark. (2020). <span style="text-decoration: underline">Redesigning instructional tools for novice makers</span>. </span>
 
-
-	<small>Notes: Best Paper award.</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Head-mounted displays (HMDs) increase immersion into virtual worlds. The problem is that this limits headset users’ awareness of bystanders: headset users cannot attend to bystanders’ presence and activities. We call this HMD boundary. We explore how to make the HMD boundary permeable by comparing different ways of providing informal awareness cues to the headset user about bystanders. We adapted and implemented three visualization techniques (Avatar View, Radar and Presence++) that share bystanders’ location and orientation with headset users. We conducted a hybrid user and simulation study with three different types of VR content (high, medium, low interactively) with twenty participants to compare how these visualization techniques allow people to maintain an awareness of bystanders, and how they affect immersion (compared to a baseline condition). Our study reveals that a see-through avatar representation of bystanders was effective, but led to slightly reduced immersion in the VR content. Based on our findings, we discuss how future awareness visualization techniques can be designed to mitigate the reduction of immersion for the headset user.</p>
+<p style="margin: 0.5em 0 1em 0">People new to Making often struggle when instructional materials, such as written documentation or video tutorials, do not address certain difficulties they encounter. This thesis explores two examples of instructional materials for novice makers which have been redesigned to help them overcome these difficulties. The first example focuses on written documentation, often created by Makers who document their own projects, providing instructions based on tools and materials the author has which may not be available to the reader. To address this, I present MakeAware, a system designed to support situation awareness and help users make decisions about which tools and materials they can use to accomplish a task. For example, if the documentation instructs the maker to attach two pieces of the project together using screws and a screwdriver but the maker does not have these, MakeAware can help them improvise by guiding them to use a hammer and nails. The second example focuses on video tutorials which are often filmed from a single camera and cannot always capture the necessary information to understand the task. To address this, I designed a multi-camera playback interface that allows viewers to change angles during the tutorial, circumventing the visibility problems that can occur from providing only one angle. For example, in a tutorial about assembling a laser-cut lantern, the instructor’s hands often cover the fasteners between the pieces so the viewer cannot see how the attachment is made. By selecting an angle that shows the fasteners in the foreground instead of the hands when needed, the viewer may be able to better understand the process. I evaluated these interfaces in separate user studies with novice makers as participants. The first study showed that the documentation style of MakeAware helped novice makers customize the instructions to their needs. The second study showed that a video interface providing flexible perspectives could be helpful in avoiding visibility problems while highlighting that this approach may be suited to non-repetitive or asymmetrical tasks. The results of both studies provide design implications that can help us accommodate the needs of novice makers through written documentation and video tutorials.</p>
 
 <!--
 
@@ -97,32 +95,24 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
+
+	<a href="http://hdl.handle.net/1880/112384"><i class="fa fa-sticky-note-o"></i> URL (http://hdl.handle.net/1880/112384)</a><br/>
 
 
-
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3486950)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
-&nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;number = {Article 484},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {5, ISS},<br />
-&nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3486950},<br />
-&nbsp;&nbsp;notes = {Best Paper award}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@mastersthesis{stark2020thesis,<br />
+&nbsp;&nbsp;author = {Stark, Jessica Theresa},<br />
+&nbsp;&nbsp;title = {Redesigning instructional tools for novice makers},<br />
+&nbsp;&nbsp;school = {University of Calgary},<br />
+&nbsp;&nbsp;year = {2020},<br />
+&nbsp;&nbsp;month = aug,<br />
+&nbsp;&nbsp;url = {http://hdl.handle.net/1880/112384},<br />
+&nbsp;&nbsp;type = {thesis}<br />
 }<br />
 </p>
 					</div>
