--- a/papers/feick2022illusions/index.html
+++ b/papers/feick2022illusions/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Towards Balancing VR Immersion and Bystander Awareness</title>
+		<title>Designing Visuo-Haptic Illusions with Proxies in Virtual Reality: Exploration of Grasp, Movement Trajectory and Object Mass</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,19 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Towards Balancing VR Immersion and Bystander Awareness</h1>
+						<h1 style="margin: 0 0 0.5em 0">Designing Visuo-Haptic Illusions with Proxies in Virtual Reality: Exploration of Grasp, Movement Trajectory and Object Mass</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kudo2021balancing">Yoshiki Kudo, Anthony Tang, Kazuyuki Fujita, Isamu Endo, Kazuki Takashima, and Yoshifumi Kitamura. (2021). <span style="text-decoration: underline">Towards Balancing VR Immersion and Bystander Awareness</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 5, ISS, Article 484.</span>
+<span id="feick2022illusions">Martin Feick, Kora Persephone Regitz, Anthony Tang, and Antonio Krüger. (2022). <span style="text-decoration: underline">Designing Visuo-Haptic Illusions with Proxies in Virtual Reality: Exploration of Grasp, Movement Trajectory and Object Mass</span>. In <i>CHI 2022: Proceedings of the 2022 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
-	<small>Notes: Best Paper award.</small>
 
+	<small>Acceptance: 24.7% - 638/2579.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Head-mounted displays (HMDs) increase immersion into virtual worlds. The problem is that this limits headset users’ awareness of bystanders: headset users cannot attend to bystanders’ presence and activities. We call this HMD boundary. We explore how to make the HMD boundary permeable by comparing different ways of providing informal awareness cues to the headset user about bystanders. We adapted and implemented three visualization techniques (Avatar View, Radar and Presence++) that share bystanders’ location and orientation with headset users. We conducted a hybrid user and simulation study with three different types of VR content (high, medium, low interactively) with twenty participants to compare how these visualization techniques allow people to maintain an awareness of bystanders, and how they affect immersion (compared to a baseline condition). Our study reveals that a see-through avatar representation of bystanders was effective, but led to slightly reduced immersion in the VR content. Based on our findings, we discuss how future awareness visualization techniques can be designed to mitigate the reduction of immersion for the headset user.</p>
+<p style="margin: 0.5em 0 1em 0">Visuo-haptic illusions are a method to expand proxy-based interactions in VR by introducing unnoticeable discrepancies between the virtual and real-world. Yet, how different design variables affect the illusions with proxies is still unclear. To unpack a subset of variables, we conducted two user studies with 48 participants to explore the impact of (1) different grasping types and movement trajectories, and (2) different grasping types and object masses on the discrepancy which may be introduced. Our Bayes analysis suggests that grasping types and object masses (≤ 500 g) did not noticeably affect the discrepancy, but for movement trajectory, results were inconclusive. Further, we identified a significant difference between un-/restricted movement trajectories. Our data shows considerable differences in participants’ proprioceptive accuracy, which seem to correlate with their prior VR experience. Finally, we illustrate the impact of our key findings on the visuo-haptic illusion design process by showcasing a new design workflow.</p>
 
 <!--
 
@@ -97,32 +97,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf)</a><br/>
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
 
 
-	<a href="http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4)</a><br/>
+	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
 
-
-	<a href="https://doi.org/10.1145/3486950"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3486950)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kudo2021balancing,<br />
-&nbsp;&nbsp;author = {Kudo, Yoshiki and Tang, Anthony and Fujita, Kazuyuki and Endo, Isamu and Takashima, Kazuki and Kitamura, Yoshifumi},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;title = {Towards Balancing VR Immersion and Bystander Awareness},<br />
-&nbsp;&nbsp;number = {Article 484},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-pacmiss-balance-immersion-awareness.mp4},<br />
-&nbsp;&nbsp;type = {journal},<br />
-&nbsp;&nbsp;volume = {5, ISS},<br />
-&nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3486950},<br />
-&nbsp;&nbsp;notes = {Best Paper award}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2022illusions,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Regitz, Kora Persephone and Tang, Anthony and Kr\"uger, Antonio},<br />
+&nbsp;&nbsp;booktitle = {CHI 2022: Proceedings of the 2022 SIGCHI Conference on Human Factors in Computing Systems},<br />
+&nbsp;&nbsp;title = {Designing Visuo-Haptic Illusions with Proxies in Virtual Reality: Exploration of Grasp, Movement Trajectory and Object Mass},<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;year = {2022},<br />
+&nbsp;&nbsp;acceptance = {24.7% - 638/2579},<br />
+&nbsp;&nbsp;pdfurl = {},<br />
+&nbsp;&nbsp;videourl = {}<br />
 }<br />
 </p>
 					</div>
